2003-08-17  Scott Dattalo  <scott@dattalo.com>
	* regression/* started the regression test directory. Only two
	tests are performed: instruction validation for the midrange
	family and a simple node test.
	
2003-08-17  Scott Dattalo  <scott@dattalo.com>
	* Huge patch from Borut Razem mailto:borut.razem@siol.net that enables
	gpsim to be compiled with MS Visual C under Windows.

	
2003-06-19  Scott Dattalo  <scott@dattalo.com>

	* src/gpsim_time.h Multiple breaks at one Cycle were getting clobbered.
	* src/gpsim_time.cc
	* src/16bit-registers.cc Added support for TMR3
	* src/pic-processor.h add pll_scale for the 18f devices.
	
2003-05-25  Scott Dattalo  <scott@dattalo.com>

	* src/breakpoints.cc program memory break points were not working.
	* Started formatting the Changelog properly
	
gpsim - Gnu Pic Simulator, a simulator for Microchip's PIC microcontrollers.

T. Scott Dattalo


gpsim-0.21.0
	* Starting with 0.21.0, Changelog will be properly formatted
	* Added 18f454,18455
	* Added breakpoint capability on nodes
	* Added spi Module
	* Added attributes to external usart module
	* Ralf rewrote the Breadboard
	* gui is now in C++
	* Added 16f627,16f628 processors
	* log command has been added (Command Line)
	* Profiling has been added (gui)
	* Trace viewer has been added
	* Added parport - parallel port loadable module
	* Source level debugging of C files
	* Added 16c55,16c62,16c63,16c72,16c73 processors
	* Added 18c442,18c452 processor
	* Added module attibutes (attribute.cc) 
	* breadboard updates when either a tris or port is changed in the register viewer
	* Enhanced module interface - now LCD module works with gpsim
	* Patch from Rudy Moore to fix TMR0 bug
	* Beautified the Single Step and Trace dump outputs
	* Added break on stack overflow and underflow
	* Added break mask to wv/rv type break points. Now you can specify
	  which bits are significant.
	* Added "abort_gpsim_now" command. This will unconditionally abort gpsim.